syntax = "proto3";

package sieve;

service SieveService {
  rpc Compute (SieveRequest) returns (SieveResponse);
}

message SieveRequest {
  uint64 limit = 1;
}

message SieveResponse {
  uint64 count = 1;
  double elapsed = 2;
}
